# fastapi-router-lazy

./: CHANGELOG.md  README.md  codecov.yml  pyproject.toml  search.json  zensical.toml
.github/workflows/: ci.yml
dev/: search.json
dev/api/: index.html
dev/extractors/: index.html
dev/usage/: index.html
docs/: api.md  extractors.md  index.md  usage.md
docs/ai-notes/: 2026-07-20-19-preserve-dependency-overrides.md
preview/defer-imports-accuracy/: index.html  search.json
preview/defer-imports-accuracy/usage/: index.html
preview/mkdocs-site/: 404.html  index.html
preview/mkdocs-site/api/: index.html
preview/mkdocs-site/extractors/: index.html
preview/mkdocs-site/usage/: index.html
preview/pages-publish-retry/api/: index.html
preview/zensical-site/: 404.html  index.html  sitemap.xml
preview/zensical-site/api/: index.html
src/fastapi_router_lazy/: __init__.py  extractor.py  middleware.py  route_info.py  router_loader.py
src/fastapi_router_lazy/extractors/: __init__.py  abc.py  cached_extractor.py  plain.py  sandbox.py
src/fastapi_router_lazy/variants/: __init__.py  extractor.py  loader.py
tests/: _bench_lazyapp.py  conftest.py  test_cached_extractor.py  test_extractor_factory.py  test_middleware.py  test_performance.py  test_plain_extractor.py  test_route_info.py  test_router_loader.py  test_sandbox_extractor.py  test_variants_extractor.py
tests/variants/: routers.py  test_extractor.py  test_loader.py
usage/: index.html
