[project]
name = "fastapi-router-lazy"
version = "0.2.0"
description = "Lazy, on-demand loading of FastAPI routers, mounted on the first matching request"
dynamic = ["readme"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rémi Alvergnat", email = "toilal.dev@gmail.com" }]
requires-python = ">=3.11"
keywords = ["fastapi", "routing", "lazy-loading", "startup", "asgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # The core (plain APIRouter lazy loading) needs nothing but FastAPI.
    # Validated in CI across the range; 0.115 is the floor.
    "fastapi>=0.115,<1.0",
]

[project.optional-dependencies]
# `pip install fastapi-router-lazy[variants]` unlocks the variant/version-aware
# extractors (extraction without importing route handlers, versions x prefixes
# x flavors metadata) built on top of fastapi-router-variants.
variants = ["fastapi-router-variants>=0.2"]

[project.urls]
Homepage = "https://github.com/Toilal/fastapi-router-lazy"
Repository = "https://github.com/Toilal/fastapi-router-lazy"
Changelog = "https://github.com/Toilal/fastapi-router-lazy/blob/develop/CHANGELOG.md"
Issues = "https://github.com/Toilal/fastapi-router-lazy/issues"

[dependency-groups]
lint = [
    "ruff",
    "mypy",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "httpx",
    # The README examples are type-checked and linted as a test (test_readme.py),
    # so ruff + mypy must be present in the test environment too.
    { include-group = "lint" },
]
docs = [
    "zensical",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    # The variant integration module is part of the codebase, so the dev/CI env
    # installs fastapi-router-variants to type-check and test it.
    "fastapi-router-variants>=0.2",
    # Tooling driven by .pre-commit-config.yaml: the hooks run via `uv run`, so
    # these must be in the dev env / uv.lock.
    "pre-commit",
    "commitizen",
    "python-semantic-release",
    "tox",
    "tox-uv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_router_lazy"]

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.semantic_release]
# Stay on the 0.x line: without this, the first release is forced to 1.0.0.
allow_zero_version = true
version_variables = ["src/fastapi_router_lazy/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): release v{version}"
commit_author = "github-actions <actions@github.com>"
# `uv lock` re-stamps the bumped version into uv.lock; `assets` includes it in
# the release commit so the lockfile never drifts behind the released version.
build_command = "uv lock"
assets = ["uv.lock"]

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
# Keep the changelog focused on user-facing changes by dropping noise commit
# types. Breaking commits (type!:) are NOT matched, so they still surface.
exclude_commit_patterns = [
    "^(?:chore|ci|test|style|docs|refactor|build)(?:\\([^)]*\\))?: ",
]

# commitizen is used only to lint commit messages (Conventional Commits).
# Versioning/releases stay owned by python-semantic-release.
[tool.commitizen]
name = "cz_conventional_commits"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "ISC",  # flake8-implicit-str-concat
    "TC",   # flake8-type-checking
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
]
ignore = [
    "SIM102",  # collapsing nested `if`s can hurt readability
    "B008",    # do not perform function calls in argument defaults (Depends() pattern)
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
markers = [
    "timing_sensitive: wall-clock-dependent; quarantine with -m 'not timing_sensitive' if it flakes",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
